--- a/style.css
+++ b/style.css
@@ -337,6 +337,11 @@ main div.offer div.active:nth-child(even) {
   background-image: url("img/banner4.jpg");
   margin: 10% auto;
   filter: grayscale(0.9);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
 }
 
 /* REALIZATIONS */
