--- a/style.css
+++ b/style.css
@@ -240,7 +240,11 @@ button.send {
   background-position: center;
   background-attachment: fixed;
   font-family: "Quicksand", sans-serif;
-  -webkit-transform: translateZ(0);
+  top: 0;
+  left: 0;
+  /* Preserve aspect ratio */
+  min-width: 100%;
+  min-height: 100%;
   /* filter: grayscale(2); */
 }
 
@@ -337,14 +341,6 @@ main div.offer div.active:nth-child(even) {
   background-image: url("img/banner4.jpg");
   margin: 10% auto;
   filter: grayscale(0.9);
-<<<<<<< HEAD
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-=======
->>>>>>> 663932993bce4819a2c9060c149673573529d5e7
-  -o-background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
 }
 
 /* REALIZATIONS */
